src/objects/filegen__File_Header_Record__c.object
<CustomObject>
    <fields>
        <fullName>filegen__Blocking_Factor__c</fullName>
        <label>Blocking Factor</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filegen__Creation_Date__c</fullName>
        <label>Creation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>filegen__Creation_Time__c</fullName>
        <label>Creation Time</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filegen__Format_Code__c</fullName>
        <label>Format Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filegen__ID_Modifier__c</fullName>
        <label>ID Modifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filegen__Immediate_Destination_Name__c</fullName>
        <label>Immediate  Destination  Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filegen__Immediate_Destination__c</fullName>
        <label>Immediate  Destination</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filegen__Immediate_Origin_Name__c</fullName>
        <label>Immediate  Origin Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filegen__Immediate_Origin__c</fullName>
        <label>Immediate Origin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filegen__Priority_Code__c</fullName>
        <label>Priority Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filegen__Record_Size__c</fullName>
        <label>Record Size</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filegen__Record_Type__c</fullName>
        <label>Record Type</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filegen__Reference_Code__c</fullName>
        <label>Reference Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>File Header Record</label>
    <nameField>
        <displayFormat>HDR-{0000000000}</displayFormat>
        <label>File Header Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>File Header Record</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>